       (note: remember to always also tweak the ball mass if changing the ball radius (the kicker now supports CreateSizedBallWithMass),
       as otherwise you will get a "floaty" ball (mass = k*radius^3)), thus (hopefully) no more ball-falling-through-playfield problem

  -> the data-format of the physics sets (*.vpp files) is basically the same, although the parameters inside are different, so unfortunately you need to set them up from scratch again
  
- New Camera Mode added to the Table menu. This mode starts the player in a special mode where you can change backdrop settings with the following keys:
     left flipper key = decrease value
     right flipper key = increase value
     left magna save key = previous backdrop option
     right magna save key = next backdrop option

- Table field height setting in the "Dimension & Slope Settings" you can define the playfield height. If this value is raised all elements on the table
  are also moved by that amount. For example: "table field height"=50 means everything on the table is raised by 50 units.

- spinners are mesh based. If the spinner bracket isn't the right one disable the "Show Bracket" settings and you will only see the spinner plate.
  
- kickers are mesh based. In the kicker settings you can set "Fall through" so that if a ball hits a kicker(hole) the ball will fall through the 
  surface which is attached to it. This only works if the wall is higher than the playfield, it won't work if the hole is on the playfield.
  
- gates are mesh based. Another option was added to the gate element "Two Way" if set the ball can roll from both sides through the gate

- add material editor
  
  -> quick and basic explanation:
     - First of all select if you want to design a metal material (steel, gold, silver, aluminium, etc)
       or any other one (plastic, wood, rubber, etc)

     - Then select the base color of your material